<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#def"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/textView_width"
            android:layout_height="@dimen/textView_height"
            android:text="@string/startTimeTxt"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="@dimen/textView_width"
            android:layout_height="@dimen/textView_height"
            android:text="@string/endTimeTxt"
            android:textAlignment="center"
            />
        <TextView
            android:layout_width="@dimen/textView_width"
            android:layout_height="@dimen/textView_height"
            android:text="@string/runTimeText"
            android:textAlignment="center"
            />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/startTime0"
            android:layout_width="@dimen/textView_width"
            android:layout_height="@dimen/textView_height"
            android:text="@string/def_time"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/endTime0"
            android:layout_width="@dimen/textView_width"
            android:layout_height="@dimen/textView_height"
            android:text="@string/def_time"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/runTime0"
            android:layout_width="@dimen/textView_width"
            android:layout_height="@dimen/textView_height"
            android:text="@string/def_time"
            android:textAlignment="center"
            />
        <Button
            android:id="@+id/setButton0"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="top"
            android:text="@string/Set" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startTime1"
            android:layout_width="@dimen/textView_width"
            android:layout_height="@dimen/textView_height"
            android:text="@string/def_time"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/endTime1"
            android:layout_width="@dimen/textView_width"
            android:layout_height="@dimen/textView_height"
            android:text="@string/def_time"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/runTime1"
            android:layout_width="@dimen/textView_width"
            android:layout_height="@dimen/textView_height"
            android:text="@string/def_time"
            android:textAlignment="center"
            />
        <Button
            android:id="@+id/setButton1"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="top"
            android:text="@string/Set" />
    </LinearLayout>

</LinearLayout>